[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assests/GamePlayTextures/Naves/Player_Sheet_1.png" type="Texture" id=1]
[ext_resource path="res://Script/Player.gd" type="Script" id=2]
[ext_resource path="res://Assests/SoundEffects/sfx/Shot_lazer.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0379

[node name="Player" type="Area2D" groups=[
"player",
]]
script = ExtResource( 2 )
fireDelay = 0.35

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.396797, 0.321996 )
scale = Vector2( 1.597, 1.597 )
texture = ExtResource( 1 )
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -10.6655, 1.95623 )
shape = SubResource( 1 )

[node name="FireGun" type="Node2D" parent="."]
position = Vector2( 77.9811, -0.396851 )

[node name="SpecialGuns" type="Node2D" parent="."]

[node name="SpecialGun1" type="Node2D" parent="SpecialGuns"]
position = Vector2( 15.4772, -42.463 )

[node name="SpecialGun2" type="Node2D" parent="SpecialGuns"]
position = Vector2( 15.4772, 43.2567 )

[node name="FireDelayerTimer" type="Timer" parent="."]
one_shot = true

[node name="sfx_shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
